<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>ru.budharain</groupId>
    <artifactId>Eshop</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Eshop</name>
    <description>Eshop</description>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <java.version>11</java.version>
        <liquibase.version>4.3.1</liquibase.version>
        <spring-cloud.version>2021.0.1</spring-cloud.version>
    </properties>

    <modules>
        <module>eshop_dataBase</module>
        <module>admin_eshop</module>
        <module>picture_service</module>
        <module>backend_eshop_company</module>
        <module>backend_eshop_user</module>
        <module>spring-eureka</module>
        <module>spring-cloud-config</module>
        <module>spring-cloud-gateway</module>
        <module>shop-delivery-service</module>
        <module>shop-picture-service-api</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
